refactor invalid genre error response